--- a/client/src/pages/StorePage/StorePage.css
+++ b/client/src/pages/StorePage/StorePage.css
@@ -25,7 +25,7 @@
 
 .centered-text {
   text-align: center;
-  padding: 80px;
+  /* padding: 80px; */
 }
 
 .store-icon {
